--- a/CSS/StylePage.css
+++ b/CSS/StylePage.css
@@ -10,3 +10,9 @@ h1{
     color: blue;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
+div {
+    background-color: rebeccapurple;
+    margin: auto;
+    width: 300px;
+}
